# rustflix

./: .gitignore  Cargo.toml
migrations/2025-08-16-063948_create_users/: down.sql  up.sql
migrations/2025-08-16-070731_create_profile/: down.sql  up.sql
migrations/2025-08-16-115428_create_title/: down.sql  up.sql
migrations/2025-08-16-120943_create_genre/: down.sql  up.sql
migrations/2025-08-16-121054_create_title_genre/: down.sql  up.sql
migrations/2025-08-16-121649_create_filmmaker/: down.sql  up.sql
migrations/2025-08-16-122211_create_casting_role/: down.sql  up.sql
migrations/2025-08-16-122318_create_casting/: down.sql  up.sql
migrations/2025-08-16-123134_create_asset/: down.sql  up.sql
migrations/2025-08-16-152515_create_video_file/: down.sql  up.sql
migrations/2025-08-16-153614_create_viewing_session/: down.sql  up.sql
migrations/2025-08-16-154407_create_playback_progress/: down.sql  up.sql
migrations/2025-08-16-154753_create_watchlist_item/: down.sql  up.sql
migrations/2025-08-16-155059_create_rating/: down.sql  up.sql
src/: app_state.rs  lib.rs  main.rs  schema.rs
src/config/: db_config.rs  log_config.rs  mod.rs
src/handlers/: asset.rs  casting.rs  casting_role.rs  filmmaker.rs  genre.rs  mod.rs  playback_progress.rs  profile.rs  rating.rs  title.rs  users.rs  video_file.rs  viewing_session.rs  watchlist_item.rs
src/models/: asset.rs  auth.rs  casting.rs  casting_role.rs  filmmaker.rs  genre.rs  mod.rs  playback_progress.rs  profile.rs  rating.rs  title.rs  users.rs  video_file.rs  viewing_session.rs  watchlist_item.rs
(+32 files in other folders)
