[package]
name = "rustflix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
argon2 = "0.5.3"
chrono = "0.4.41"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand_core = "0.9.3"
serde = "1.0.219"
serde_json = "1.0.143"
uuid = "1.18.0"
