[package]
name = "rustflix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"]} 
serde_json = "1.0.143"
sys-locale = "0.3.2"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[build-dependencies]
diesel = { version = "2.2.0", features = ["postgres"] }
